--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,57 @@ on:
       - testing-ci.*
 
 jobs:
+  arch:
+    name: Build Arch Linux Package
+    runs-on: ubuntu-latest
+    container: archlinux
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Install dependencies
+      run: pacman -Sy --noconfirm sudo binutils fakeroot base-devel
+
+    - name: Build package
+      run: |
+        cd pkg/arch
+
+        # Fix permissions (can't makepkg as root)
+        echo "nobody ALL=(ALL) NOPASSWD: /usr/bin/pacman" >> /etc/sudoers
+        chown -R nobody .
+
+        # Package compression settings (Matches latest Arch)
+        export PKGEXT='.pkg.tar.zst'
+        export COMPRESSZST=(zstd -c -T0 --ultra -20 -)
+
+        # Build
+        su nobody --pty -p -s /bin/bash -c 'makepkg -f --noconfirm'
+
+    - name: Sign package
+      env:
+        GPG_KEY_ID: 56C464BAAC421453
+        GPG_KEY: ${{ secrets.SURFACE_GPG_KEY }}
+      run: |
+        cd pkg/arch
+
+        # import GPG key
+        echo "$GPG_KEY" | base64 -d | gpg --import --no-tty --batch --yes
+        export GPG_TTY=$(tty)
+
+        # sign package
+        ls *.pkg.tar.zst | xargs -L1 gpg --detach-sign --batch --no-tty -u $GPG_KEY_ID
+
+    - name: Prepare release
+      run: |
+        mkdir release
+        mv ./pkg/arch/*.pkg.tar.zst{,.sig} release
+
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v1
+      with:
+        name: arch-latest
+        path: release
+
   debian:
     name: Build Debian Package
     runs-on: ubuntu-latest
