--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,15 +2,12 @@ name: Release
 
 on:
   push:
-    branches:
-      - feature/ci
-
     tags:
-      - v[0-9]*
+      - v[0-9]+.*
       - testing-ci.*
 
 jobs:
-  arch:
+  build-arch:
     name: Build Arch Linux Package
     runs-on: ubuntu-latest
     container: archlinux
@@ -61,7 +58,7 @@ jobs:
         name: arch-latest
         path: release
 
-  debian:
+  build-deb:
     name: Build Debian Package
     runs-on: ubuntu-latest
     container: debian:sid
@@ -102,3 +99,27 @@ jobs:
       with:
         name: debian-latest
         path: release
+
+  release:
+    name: Publish release
+    needs: [build-deb, build-arch]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Download Debian artifacts
+      uses: actions/download-artifact@v1
+      with:
+        name: debian-latest
+
+    - name: Download Arch Linux artifacts
+      uses: actions/download-artifact@v1
+      with:
+        name: arch-latest
+
+    - name: Upload assets
+      uses: svenstaro/upload-release-action@v1-release
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: ./*-latest/*
+        tag: ${{ github.ref }}
+        overwrite: true
+        file_glob: true
