--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -304,7 +304,7 @@ jobs:
         update_branch="${BRANCH_STAGING}-$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 32 | head -n 1)"
         git switch -c "${update_branch}"
         git add .
-        git commit -m "Update Debian secure-boot MOK"
+        git commit -m "Update Debian IPTS firmware"
         git push --set-upstream origin "${update_branch}"
 
   repo-arch:
@@ -353,7 +353,7 @@ jobs:
         update_branch="${BRANCH_STAGING}-$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 32 | head -n 1)"
         git switch -c "${update_branch}"
         git add .
-        git commit -m "Update Arch Linux secure-boot MOK"
+        git commit -m "Update Arch Linux IPTS firmware"
         git push --set-upstream origin "${update_branch}"
 
   repo-f32:
@@ -403,7 +403,7 @@ jobs:
         update_branch="${BRANCH_STAGING}-$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 32 | head -n 1)"
         git checkout -b "${update_branch}"
         git add .
-        git commit -m "Update Fedora 32 secure-boot MOK"
+        git commit -m "Update Fedora 32 IPTS firmware"
         git push --set-upstream origin "${update_branch}"
 
   repo-f31:
@@ -453,7 +453,7 @@ jobs:
         update_branch="${BRANCH_STAGING}-$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 32 | head -n 1)"
         git checkout -b "${update_branch}"
         git add .
-        git commit -m "Update Fedora 31 secure-boot MOK"
+        git commit -m "Update Fedora 31 IPTS firmware"
         git push --set-upstream origin "${update_branch}"
 
   repo-f30:
@@ -503,5 +503,5 @@ jobs:
         update_branch="${BRANCH_STAGING}-$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 32 | head -n 1)"
         git checkout -b "${update_branch}"
         git add .
-        git commit -m "Update Fedora 30 secure-boot MOK"
+        git commit -m "Update Fedora 30 IPTS firmware"
         git push --set-upstream origin "${update_branch}"
